--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                                 <p>
                                     <span class="speaker-highlight speaker-lance">Лэнс:</span>
                                     Я обычно делаю отдельные серверы для разных проектов со специфичными промптами и ресурсами. 
-                                    Это помогает избежать ситуации «не работает» → «а, нужно лучше промптить» → «но как пользователь должен об этому узнать?»
+                                    Это помогает избежать ситуации «не работает» → «а, нужно лучше промптить» → «но как пользователь должен об этом узнать?»
                                 </p>
                             </div>
                         </section>
